Code for APX-16627	Table width not set correctly Having the default padding is causing table to be misaligned, so removing default padding of table cols (left & right)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -970,8 +970,8 @@ ol, ul {
 // }
 /*Removing padding lefta nd right from table coloumn dropdown.*/
 .cds--data-table td, .cds--data-table tbody th {
-    padding-inline: 1rem 1rem !important;
-    // padding-inline: 0rem 0rem !important;
+   // padding-inline: 1rem 1rem !important;
+    padding-inline: 0rem 0rem !important;
 }
 
 /*Removing padding frpm text and caret icon from dropdown*/
